attempting to fix broken ui from h5bp reset styles

--- a/static/css/_reset.scss
+++ b/static/css/_reset.scss
@@ -673,7 +673,7 @@ textarea {
  */
 
 .hidden {
-	display: none !important;
+	/*display: none !important;*/
 	visibility: hidden;
 }
 
