--- a/static/css/main.css
+++ b/static/css/main.css
@@ -698,7 +698,7 @@ textarea {
  * Hide from both screenreaders and browsers: h5bp.com/u
  */
 .hidden {
-  display: none !important;
+  /*display: none !important;*/
   visibility: hidden; }
 
 /*
